--- a/source/style/index.css
+++ b/source/style/index.css
@@ -1,9 +1,56 @@
+@import url('./base.css');
+
+body{
+    font-family: sans-serif;
+}
+
 .navbar {
     background-color: #206a5d;
     color: white;
+    height: 10vh;
 }
 
-.navbar > ul {
+.navbar-items {
+    width: 50%;
+    height: 100%;
+    margin-left: auto;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     list-style-type: none;
+}
+
+.navbar-link{
+    text-decoration: none;
+    cursor: pointer;
+    user-select: none;
+}
+
+.navbar-link{
+    position: relative;
+}
+
+.navbar-link:link{
+    color: white;
+}
+
+.navbar-link:visited{
+    color: white;
+}
+
+.navbar-link::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    background-color: white;
+    height: 2px;
+    width: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-link:hover::after{
+    content: "";
+    left: 0;
+    width: 100%;
 }
